{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 30,
  "lineage": "3269c908-6180-8b72-2e03-f993935a118d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0add668815c339f14",
            "arn": "arn:aws:ec2:us-east-1:891377089227:elastic-ip/eipalloc-0add668815c339f14",
            "domain": "vpc",
            "id": "eipalloc-0add668815c339f14",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-44-190-221.compute-1.amazonaws.com",
            "public_ip": "52.44.190.221",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Production",
              "Name": "production-nat-eip-1",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-nat-eip-1",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c0ba7f70147f699",
            "arn": "arn:aws:ec2:us-east-1:891377089227:elastic-ip/eipalloc-04c0ba7f70147f699",
            "domain": "vpc",
            "id": "eipalloc-04c0ba7f70147f699",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-50-19-59-55.compute-1.amazonaws.com",
            "public_ip": "50.19.59.55",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Production",
              "Name": "production-nat-eip-2",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-nat-eip-2",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd0d4a745ee9b834",
            "arn": "arn:aws:ec2:us-east-1:891377089227:elastic-ip/eipalloc-0cd0d4a745ee9b834",
            "domain": "vpc",
            "id": "eipalloc-0cd0d4a745ee9b834",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-90-227-88.compute-1.amazonaws.com",
            "public_ip": "54.90.227.88",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Production",
              "Name": "production-nat-eip-3",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-nat-eip-3",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "master",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0887e1d5e322290cf",
            "arn": "arn:aws:ec2:us-east-1:891377089227:instance/i-010154878b2a9570b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-010154878b2a9570b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01ce37144e4b24e51",
            "private_dns": "ip-10-0-1-142.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.142",
            "public_dns": "ec2-54-242-136-46.compute-1.amazonaws.com",
            "public_ip": "54.242.136.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:891377089227:key/68dd3bbe-280e-4a2c-af0d-a63ae2481b86",
                "throughput": 125,
                "volume_id": "vol-034a83bf79d72e616",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-094e2d09301593c89",
            "tags": {
              "Environment": "Production",
              "Name": "production-master",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Role": "master",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-master",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Role": "master",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0413b2598b5dd0b8b"
            ]
          },
          "dependencies": [
            "aws_security_group.master",
            "aws_security_group.slave",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "slave1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0887e1d5e322290cf",
            "arn": "arn:aws:ec2:us-east-1:891377089227:instance/i-007f5db55c6c1139d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-007f5db55c6c1139d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-009e427c1b17d4088",
            "private_dns": "ip-10-0-53-193.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.53.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:891377089227:key/68dd3bbe-280e-4a2c-af0d-a63ae2481b86",
                "throughput": 125,
                "volume_id": "vol-0461014fce2504c7c",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c24bd3bc404a938a",
            "tags": {
              "Environment": "Production",
              "Name": "production-slave1",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Role": "slave",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-slave1",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Role": "slave",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d741d905553b144d"
            ]
          },
          "dependencies": [
            "aws_security_group.master",
            "aws_security_group.slave",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "slave2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0887e1d5e322290cf",
            "arn": "arn:aws:ec2:us-east-1:891377089227:instance/i-00152158b680cc77a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00152158b680cc77a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-057df9badac60bf38",
            "private_dns": "ip-10-0-59-54.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.59.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:891377089227:key/68dd3bbe-280e-4a2c-af0d-a63ae2481b86",
                "throughput": 125,
                "volume_id": "vol-079a9886745462d08",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c24bd3bc404a938a",
            "tags": {
              "Environment": "Production",
              "Name": "production-slave2",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Role": "slave",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-slave2",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Role": "slave",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d741d905553b144d"
            ]
          },
          "dependencies": [
            "aws_security_group.master",
            "aws_security_group.slave",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377089227:internet-gateway/igw-0c944a17943d922e3",
            "id": "igw-0c944a17943d922e3",
            "owner_id": "891377089227",
            "tags": {
              "Environment": "Production",
              "Name": "production-igw",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-igw",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05b3af9abae29edf9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0add668815c339f14",
            "association_id": "eipassoc-09ec41c714eda1f40",
            "connectivity_type": "public",
            "id": "nat-03d984af4651a13d3",
            "network_interface_id": "eni-0db37d104a3ad940f",
            "private_ip": "10.0.11.21",
            "public_ip": "52.44.190.221",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-094e2d09301593c89",
            "tags": {
              "Environment": "Production",
              "Name": "production-nat-gateway-1",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-nat-gateway-1",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c0ba7f70147f699",
            "association_id": "eipassoc-0a20f7be8055a10a9",
            "connectivity_type": "public",
            "id": "nat-0742cb97fb49a0e66",
            "network_interface_id": "eni-00e5053fc231c45e6",
            "private_ip": "10.0.21.240",
            "public_ip": "50.19.59.55",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fa5492cd2b0ef78b",
            "tags": {
              "Environment": "Production",
              "Name": "production-nat-gateway-2",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-nat-gateway-2",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd0d4a745ee9b834",
            "association_id": "eipassoc-0012364e80918f07b",
            "connectivity_type": "public",
            "id": "nat-04f07755fd9b31505",
            "network_interface_id": "eni-05e2c333de9d509bb",
            "private_ip": "10.0.34.102",
            "public_ip": "54.90.227.88",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c0182a6b3b6505fe",
            "tags": {
              "Environment": "Production",
              "Name": "production-nat-gateway-3",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-nat-gateway-3",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377089227:route-table/rtb-0613fa1bf48218907",
            "id": "rtb-0613fa1bf48218907",
            "owner_id": "891377089227",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03d984af4651a13d3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Production",
              "Name": "production-private-rt-1",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-private-rt-1",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b3af9abae29edf9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377089227:route-table/rtb-079492d411c1fb744",
            "id": "rtb-079492d411c1fb744",
            "owner_id": "891377089227",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0742cb97fb49a0e66",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Production",
              "Name": "production-private-rt-2",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-private-rt-2",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b3af9abae29edf9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377089227:route-table/rtb-0a67e722ddef81bd1",
            "id": "rtb-0a67e722ddef81bd1",
            "owner_id": "891377089227",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04f07755fd9b31505",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Production",
              "Name": "production-private-rt-3",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-private-rt-3",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b3af9abae29edf9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377089227:route-table/rtb-0c1729584e5fe47a6",
            "id": "rtb-0c1729584e5fe47a6",
            "owner_id": "891377089227",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c944a17943d922e3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Production",
              "Name": "production-public-rt",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-public-rt",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b3af9abae29edf9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037009d342097c620",
            "route_table_id": "rtb-0613fa1bf48218907",
            "subnet_id": "subnet-0c24bd3bc404a938a"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e513d6aed1d0c0cb",
            "route_table_id": "rtb-079492d411c1fb744",
            "subnet_id": "subnet-07fc2837736aa3178"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0add866bcd32ea36d",
            "route_table_id": "rtb-0a67e722ddef81bd1",
            "subnet_id": "subnet-0845d1100641bab94"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0616d3ed2e16a735c",
            "route_table_id": "rtb-0c1729584e5fe47a6",
            "subnet_id": "subnet-094e2d09301593c89"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0848837265546407a",
            "route_table_id": "rtb-0c1729584e5fe47a6",
            "subnet_id": "subnet-0fa5492cd2b0ef78b"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068bba65857c85d4e",
            "route_table_id": "rtb-0c1729584e5fe47a6",
            "subnet_id": "subnet-0c0182a6b3b6505fe"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377089227:security-group/sg-0413b2598b5dd0b8b",
            "description": "Security group for master instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0413b2598b5dd0b8b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "production-master-sg",
            "name_prefix": "",
            "owner_id": "891377089227",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "Name": "production-master-sg",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-master-sg",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b3af9abae29edf9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "slave",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377089227:security-group/sg-0d741d905553b144d",
            "description": "Security group for slave instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d741d905553b144d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0413b2598b5dd0b8b"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "production-slave-sg",
            "name_prefix": "",
            "owner_id": "891377089227",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "Name": "production-slave-sg",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-slave-sg",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b3af9abae29edf9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.master",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377089227:subnet/subnet-0c24bd3bc404a938a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c24bd3bc404a938a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377089227",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "production-private-subnet-1",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-private-subnet-1",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true",
              "Tier": "Private"
            },
            "vpc_id": "vpc-05b3af9abae29edf9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377089227:subnet/subnet-07fc2837736aa3178",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fc2837736aa3178",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377089227",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "production-private-subnet-2",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-private-subnet-2",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true",
              "Tier": "Private"
            },
            "vpc_id": "vpc-05b3af9abae29edf9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377089227:subnet/subnet-0845d1100641bab94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0845d1100641bab94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377089227",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "production-private-subnet-3",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-private-subnet-3",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true",
              "Tier": "Private"
            },
            "vpc_id": "vpc-05b3af9abae29edf9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377089227:subnet/subnet-094e2d09301593c89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094e2d09301593c89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377089227",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "production-public-subnet-1",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-public-subnet-1",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true",
              "Tier": "Public"
            },
            "vpc_id": "vpc-05b3af9abae29edf9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377089227:subnet/subnet-0fa5492cd2b0ef78b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa5492cd2b0ef78b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377089227",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "production-public-subnet-2",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-public-subnet-2",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true",
              "Tier": "Public"
            },
            "vpc_id": "vpc-05b3af9abae29edf9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377089227:subnet/subnet-0c0182a6b3b6505fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0182a6b3b6505fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377089227",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "production-public-subnet-3",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-public-subnet-3",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true",
              "Tier": "Public"
            },
            "vpc_id": "vpc-05b3af9abae29edf9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377089227:vpc/vpc-05b3af9abae29edf9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f8825357d753baf3",
            "default_route_table_id": "rtb-03333ed59740e5880",
            "default_security_group_id": "sg-0f341da1f09ba781d",
            "dhcp_options_id": "dopt-0b944a5515e37f1f3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05b3af9abae29edf9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03333ed59740e5880",
            "owner_id": "891377089227",
            "tags": {
              "Environment": "Production",
              "Name": "production-vpc",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-vpc",
              "Owner": "DevOps-Team",
              "Project": "Master-Slave-Cluster",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}